--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -1,11 +1,44 @@
 /* font-family: 'Playfair Display', serif;
 font-family: 'Poppins', sans-serif; */
+:root { 
+    --branding-color: #6c63ff;
+    --secondary-color: #f9f7fe;
+    --heading-font-family: "Playfair Display", serif;
+    --default-font-family: "Poppins", sans-serif;
+}
+
 
 h1 {
     font-family: 'Playfair Display', serif; 
+    color: black; 
+    font-weight: bold;
+    font-size: 96px;
+}
+
+h2 { 
+    font-family: 'Playfair Display', serif;
+    font-weight: normal; 
+    line-height: 2; 
+    font-size: 24px; 
+    color: black
 }
 
 p { 
     font-family: 'Poppins', sans-serif;
+    font-size: 36px;
+    font-weight: bold;
+    margin: 0;
+    color:#272142
+}
+
+.btn { 
+    display: inline-block; 
+    padding: 15px 30px;
+    font-weight: 400;
+    background: pink;
+    border-radius: 4px; 
+    color: white; 
+    font-size: 18px; 
+    line-height: 27px; 
 
 }
