--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -9,36 +9,43 @@ font-family: 'Poppins', sans-serif; */
 
 
 h1 {
-    font-family: 'Playfair Display', serif; 
+    font-family: var(--heading-font-family);
     color: black; 
     font-weight: bold;
-    font-size: 96px;
+    font-size:96px;
+
 }
 
 h2 { 
-    font-family: 'Playfair Display', serif;
+    font-family: var(--heading-font-family);
     font-weight: normal; 
     line-height: 2; 
-    font-size: 24px; 
-    color: black
+    color: black;
+    font-size: 24px;
 }
 
 p { 
-    font-family: 'Poppins', sans-serif;
-    font-size: 36px;
+    font-family: var(--default-font-family);
     font-weight: bold;
     margin: 0;
-    color:#272142
+    color:#272142;
+    font-size: 36px;
 }
 
-.btn { 
+
+
+.button { 
     display: inline-block; 
     padding: 15px 30px;
     font-weight: 400;
-    background: pink;
+    background: var(--branding-color);
     border-radius: 4px; 
     color: white; 
     font-size: 18px; 
     line-height: 27px; 
+}
 
+.main-element { 
+    padding: 160px 20px;
+    background: var(--secondary-color);
 }
